; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_gpu_error.c_error_print_context.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_gpu_error.c_error_print_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_error_state_buf = type { i32 }
%struct.drm_i915_error_context = type { i32, i32, %struct.TYPE_2__, i32, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [49 x i8] c"%s%s[%d] hw_id %d, prio %d, guilty %d active %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_i915_error_state_buf*, i8*, %struct.drm_i915_error_context*)* @error_print_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @error_print_context(%struct.drm_i915_error_state_buf* %0, i8* %1, %struct.drm_i915_error_context* %2) #0 {
  %4 = alloca %struct.drm_i915_error_state_buf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.drm_i915_error_context*, align 8
  store %struct.drm_i915_error_state_buf* %0, %struct.drm_i915_error_state_buf** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.drm_i915_error_context* %2, %struct.drm_i915_error_context** %6, align 8
  %7 = load %struct.drm_i915_error_state_buf*, %struct.drm_i915_error_state_buf** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load %struct.drm_i915_error_context*, %struct.drm_i915_error_context** %6, align 8
  %10 = getelementptr inbounds %struct.drm_i915_error_context, %struct.drm_i915_error_context* %9, i32 0, i32 5
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.drm_i915_error_context*, %struct.drm_i915_error_context** %6, align 8
  %13 = getelementptr inbounds %struct.drm_i915_error_context, %struct.drm_i915_error_context* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.drm_i915_error_context*, %struct.drm_i915_error_context** %6, align 8
  %16 = getelementptr inbounds %struct.drm_i915_error_context, %struct.drm_i915_error_context* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.drm_i915_error_context*, %struct.drm_i915_error_context** %6, align 8
  %19 = getelementptr inbounds %struct.drm_i915_error_context, %struct.drm_i915_error_context* %18, i32 0, i32 2
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.drm_i915_error_context*, %struct.drm_i915_error_context** %6, align 8
  %23 = getelementptr inbounds %struct.drm_i915_error_context, %struct.drm_i915_error_context* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.drm_i915_error_context*, %struct.drm_i915_error_context** %6, align 8
  %26 = getelementptr inbounds %struct.drm_i915_error_context, %struct.drm_i915_error_context* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @err_printf(%struct.drm_i915_error_state_buf* %7, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i8* %8, i32 %11, i32 %14, i32 %17, i32 %21, i32 %24, i32 %27)
  ret void
}

declare dso_local i32 @err_printf(%struct.drm_i915_error_state_buf*, i8*, i8*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
